fixed img alignment and add team members

--- a/src/styles/custom-utilities.css
+++ b/src/styles/custom-utilities.css
@@ -272,6 +272,10 @@ display: grid;
 margin-left: 20.2%;
 }
 
+.grid-2 {
+  display: grid;
+  margin: 0 auto;
+  }
 
 .hovereffect {
   width: 60%;
